--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Amsterdam
+          repositories_affiliations: contributer,owner
           plugin_followup: yes
           plugin_followup_sections: user
           plugin_languages: yes
